--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,10 @@ body{
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
+}
+
+.contenido{
+    width: 100%;
+    height: 100vh;
 }
